--- a/oTree/captcha/templates/captcha/Decision.html
+++ b/oTree/captcha/templates/captcha/Decision.html
@@ -8,7 +8,7 @@ Stage 3 - The Decision Stage
 
 {% block styles %}
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-<link rel="stylesheet" href="/resources/demos/style.css">
+
 <style>
  #custom-handle {
      width: 3em;
@@ -23,20 +23,44 @@ Stage 3 - The Decision Stage
 
 
 {% block scripts %}
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script>
- $( function() {
-     var handle = $( "#custom-handle" );
-     $( "#slider" ).slider({
-         create: function() {
-             handle.text($( this ).slider( "value" ) + "%");
-         },
-         slide: function( event, ui ) {
-             handle.text( ui.value + "%" );
-         }
-     });
- } );
-</script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script>
+   document.getElementById('takeaway').value = 0;
+   $( function() {
+       var handle = $( "#custom-handle" );
+       $( "#slider" ).slider({
+           create: function() {
+               handle.text($( this ).slider( "value" ) + "%");
+
+
+           },
+           slide: function( event, ui ) {
+               handle.text( ui.value + "%" );
+               document.getElementById('takeaway').value = ui.value;
+               document.getElementById("takentext1").innerHTML = ui.value;
+               document.getElementById("takentext2").innerHTML = ui.value;
+               document.getElementById("resttext1").innerHTML = 100- ui.value;
+               document.getElementById("resttext2").innerHTML = 100- ui.value;
+           }
+       });
+   } );
+
+
+   function hideConf() {
+       $('#confirmation').hide();
+       $('#sliderandinfo').show();
+       $('#selectbutton').show();
+
+
+   }
+
+   function showConf() {
+       $('#confirmation').show();
+       $('#sliderandinfo').hide();
+       $('#selectbutton').hide();
+
+   }
+  </script>
 {% endblock %}
 {% block content %}
   <div class="container">
@@ -46,20 +70,44 @@ In the Decision Stage, you will be offered the opportunity to take away a percen
 {% else %} group members 
 {% endif %}
     </div>
-    <div class="row mt-4">
-I would like to take XX% of each of the other participants. The amount they earn will be XX% of the what they earned from the effort stage.
-    </div>
+
     <div class="row">
 
       <div class="col">
+        <div id="confirmation" class="alert-primary m-5" style="display:none">
+          <p class="m-2">
+            You decided to take <span id="takentext2">0</span>%. The rest will be &nbsp;<span id="resttext2"  class="resttext">100</span>% of what they earned previously <br/>
+ Do you want to continue? </p>
+
+          <button class="btn btn-primary m-3">
+            Yes. Continue.
+          </button>
+
+          <button type="button" class="btn btn-primary m-3" onclick="hideConf()">
+            No. Go back
+          </button>
+        </div>
+        <div id="sliderandinfo">
       <div id="slider" class="m-5">
         <div id="custom-handle" class="ui-slider-handle"></div>
       </div>
+    <div class="row mt-4">
+      <p>
+        I would like to take&nbsp;<span id="takentext1"  class="takentext">0</span>% of each of the other participants. </p>
 
+      <p>
+        The amount they earn will be &nbsp;<span id="resttext1" class="resttext">100</span>% of the what they earned from the effort stage.</p>
+    </div>
+        </div>
       </div>
     </div>
+    <button id="selectbutton" type="button" class="btn btn-primary m-3" onclick="showConf()">
+      Select
+    </button>
   </div>
+  <input type="hidden" name="takeaway" id="takeaway" />
 
-{% next_button %}
+
+
 
 {% endblock %}
