add podium for competition treatment

--- a/oTree/captcha/templates/captcha/Results.html
+++ b/oTree/captcha/templates/captcha/Results.html
@@ -6,19 +6,35 @@
 {% endblock %}
 
 {% block content %}
-  <meta http-equiv="refresh" content="10; url={{ session.config.completion_url }}" /> 
-  <p>
-  You are the winner!
-  </p>
-  <button id="myButton" type="button" class="btn btn-primary" >Finish</button>
-
   <script type="text/javascript">
    document.getElementById("myButton").onclick = function () {
        location.href = "{{ session.config.completion_url }}";
    };
   </script>
+  <!--  <meta http-equiv="refresh" content="120; url={{ session.config.completion_url }}" />  --> 
+
+  {% if session.config.competition %}
+    {% include "./res_competition.html" %}
+  {% endif %}
 
 
+
+    <div align="center">
+
+  {% if player.is_dictator %} You were selected as the decision maker in your group. {% else %} 
+    You were not selected as the decision maker in your group. {% endif %}
+
+    <h3>
+      You earned a bonus of  {{ player.payoff_after | c }} from this study.<br/>
+    </h3>
+
+
+
+    <p>
+      Thank you for participating our study.
+    </p>
+    <button id="myButton" type="button" class="btn btn-primary" >Click to finish experiment</button>
+    </div>
 {% endblock %}
 
 
