--- a/oTree/captcha/templates/captcha/Results.html
+++ b/oTree/captcha/templates/captcha/Results.html
@@ -7,7 +7,7 @@
 
 {% block content %}
   <script type="text/javascript">
-   document.getElementById("myButton").onclick = function () {
+   function finishExperiment() {
        location.href = "{{ session.config.completion_url }}";
    };
   </script>
@@ -15,6 +15,8 @@
 
   {% if session.config.competition %}
     {% include "./res_competition.html" %}
+  {% else %}
+    {% include "./res_control.html" %}
   {% endif %}
 
 
@@ -33,7 +35,7 @@
     <p>
       Thank you for participating our study.
     </p>
-    <button id="myButton" type="button" class="btn btn-primary" >Click to finish experiment</button>
+    <button id="myButton" type="button" class="btn btn-primary" onclick="finishExperiment()">Click to finish experiment</button>
     </div>
 {% endblock %}
 
