--- a/oTree/captcha/templates/captcha/Captcha.html
+++ b/oTree/captcha/templates/captcha/Captcha.html
@@ -28,18 +28,24 @@
 
       <button id="submitButton" type="button" class="btn btn-primary" onclick="sendAnswer()">Submit</button> 
     </div>
+    <div class ="p-2">
+      <h5>You can also press <kbd>ENTER ↵</kbd> key on your keyboard to submit the captcha.
+      </h5> To get a new captcha, you can click on <kbd>Submit</kbd> or press <kbd>ENTER ↵</kbd> key.
+    </div>
   </div>
   <script>
+   document.getElementById("id_user_input").focus();
+
    $("#alert_next_captcha").css('visibility', 'hidden');
    function sendAnswer() {
        liveSend(document.getElementById('id_user_input').value);
-    document.getElementById("submitButton").disabled = true;
+       document.getElementById("submitButton").disabled = true;
        document.getElementById("id_user_input").focus();
        setTimeout(function() {
            document.getElementById("submitButton").disabled = false;
 
-        
-    }, 500);
+           
+       }, 500);
    } 
 
    function liveRecv(data) {
@@ -52,8 +58,8 @@
        $('#alert_next_captcha').fadeTo(500,0);
 
    }
-///*
-// To make enter as submit
+   ///*
+   // To make enter as submit
    $(function() {
        $("form input").keypress(function (e) {
            if ((e.which && e.which == 13) || (e.keyCode && e.keyCode == 13)) {
@@ -65,6 +71,6 @@
        });
    });
 
-//*/
+   //*/
   </script>
 {% endblock %}
