--- a/oTree/captcha/templates/captcha/res_competition.html
+++ b/oTree/captcha/templates/captcha/res_competition.html
@@ -34,19 +34,19 @@
 
 
  .golden {
-     background-color: #ffcc00;
+     background-color: #FFD700;
  }
 
  .bronze {
-     background-color: #784421;
+     background-color: #C9AE5D;
  }
 
  .silver {
-     background-color: #AAAAAA;
+     background-color: #C0C0C0;
  }
 
  .loser {
-     background-color: #005500;
+     background-color: #673a3f;
  }
 
  .rank1{
