--- a/oTree/captcha/templates/captcha/res_competition.html
+++ b/oTree/captcha/templates/captcha/res_competition.html
@@ -38,7 +38,7 @@
  }
 
  .bronze {
-     background-color: #C9AE5D;
+     background-color: #CD7F32;
  }
 
  .silver {
@@ -46,7 +46,7 @@
  }
 
  .loser {
-     background-color: #673a3f;
+     background-color: #696112;
  }
 
  .rank1{
