--- a/oTree/instructions/templates/instructions/i3.html
+++ b/oTree/instructions/templates/instructions/i3.html
@@ -1,11 +1,59 @@
 <br>
 <div class="card-header bg-transparent mainheader">
-  <h3 class="card-title font-weight-bold mt-3 mb-3">Catchy title here 3</h3>
+  <h3 class="card-title font-weight-bold mt-3 mb-3">
+    The game consists three stages: Effort Stage, Decision Stage, and the Feedback Stage.
+</h3>
 </div>
 
 <br>
 
-This is part 3
+<ul>
+  <li><strong>Stage 1</strong>: In <strong>the effort stage</strong>, you will solve a task which would allow you to collect some money. The money you collected may or may not be included in the your final earnings from this experiment based on your or 
+    {% if session.config.competition %}
+      your competitors’
+    {% else %}
+      other group members’
+    {% endif %}
+    decisions.
+  </li>
+
+  <li><strong>Stage 2</strong>: In <strong>the decision stage</strong>, you and
+    {% if session.config.competition %}
+      your competitors
+    {% else %}
+      other group members
+    {% endif %}
+    will decide on whether to take some part of the collected money from
+    {% if session.config.competition %}
+      your competitors in the group.
+    {% else %}
+      other group  members.
+    {% endif %}
+  </li>
+
+  <li><strong>Stage 3</strong>: In <strong>the feedback stage</strong> you will see the earnings
+    {% if session.config.competition %}
+      and the ranking of you and your competitors.
+    {% else %}
+      of you and other group members.
+    {% endif %}
+
+    <div>
+    {% if session.config.competition %}
+         [SCREENSHOT COMP]
+    {% else %}
+      [SCREENSHOT CONT]
+    {% endif %}
+    </div>
+
+    <p>    In the next few pages we will explain the details and the potential earnings from these stages. </p>
+
+
+</li>
+
+</ul>
+
+
 
 <button onclick="topFunction()" type="button" class="prevtab btn-primary btn back">Back</button>
 
