--- a/oTree/instructions/templates/instructions/i5.html
+++ b/oTree/instructions/templates/instructions/i5.html
@@ -7,14 +7,8 @@
 
 <br>
 <p>
-  In this stage, you, and 
-  {% if session.config.competition %}
-    your competitors
-  {% else %}
-    other group members
-  {% endif %}
+  For each captcha you entered correctly, you will collect <strong>0.10 GBP</strong> strong The task will last<strong> 90 seconds</strong>. 
 
- will be shown a series of <strong>captchas</strong>, i.e. an image of a sequence of numbers and letters. You should try to input these letters in the given field. After each input, whether your entry was correct or not, you will be shown another captcha.
 </p>
 
 <button onclick="topFunction()" type="button" class="prevtab btn-primary btn back">Back</button>
