--- a/oTree/instructions/templates/instructions/i2.html
+++ b/oTree/instructions/templates/instructions/i2.html
@@ -1,11 +1,34 @@
 <br>
 <div class="card-header bg-transparent mainheader">
-  <h3 class="card-title font-weight-bold mt-3 mb-3">Welcome 2</h3>
+  <h3 class="card-title font-weight-bold mt-3 mb-3">
+    During the experiment, you will
+    {% if session.config.competition %}
+      compete against 3 other participants.
+{% else %}
+be matched in a group with 3 other participants.
+{% endif %}
+</h3>
 </div>
 
 <br>
 
-This is part 2
+<p>
+  For the rest of this study you will 
+  {% if session.config.competition %}
+    compete against 3 other participants.
+  {% else %}
+    be matched in a group with 3 other participants.
+  {% endif %}
+
+{% if session.config.competition %}
+Your competitors 
+{% else %}
+The group members
+{% endif %}
+will be three other Prolific participants who are currently taking this study. 
+</p>
+
+<p>Please note: You might need to wait a few minutes after instructions for other participants to join.</p>
 
 <button onclick="topFunction()" type="button" class="prevtab btn-primary btn back">Back</button>
 
