--- a/oTree/instructions/templates/instructions/i6.html
+++ b/oTree/instructions/templates/instructions/i6.html
@@ -7,14 +7,13 @@
 
 <br>
 <p>
-  In this stage, you, and 
+  Please note that earnings from this stage are not final payments. Your earnings will depend on your decision or the decision of one other
   {% if session.config.competition %}
-    your competitors
+    competitors in your group.
   {% else %}
-    other group members
+    participant in your group.
   {% endif %}
 
- will be shown a series of <strong>captchas</strong>, i.e. an image of a sequence of numbers and letters. You should try to input these letters in the given field. After each input, whether your entry was correct or not, you will be shown another captcha.
 </p>
 
 <button onclick="topFunction()" type="button" class="prevtab btn-primary btn back">Back</button>
