--- a/oTree/instructions/templates/instructions/Instructions.html
+++ b/oTree/instructions/templates/instructions/Instructions.html
@@ -16,6 +16,11 @@
   <link href="{% static 'back_button_v1/css/custom.css' %}" rel="stylesheet">
   <style>
    ul li { padding: 5px 0px; }
+
+   kbd {
+       background-color: #999999;  // Changes background color
+       text-color: #000000;                  // Changes text color
+   }
   </style>
 
 <!-- 
@@ -32,58 +37,71 @@
 {% block content %}
   <!-- Tab navigation -->
 
-  <ul class="nav nav-tabs fixed-top navbar-light bg-light justify-content-center" id="myTab" role="tablist" style="display: none">
+  <ul class="nav nav-tabs fixed-top navbar-light bg-light justify-content-center" id="myTab" role="tablist" <!-- style="display: none -->
+>
 
 
     <li class="nav-item">
       <a style="pointer-events: none; cursor: default;" class="nav-link active" id="part1-tab" data-toggle="tab"
-         href="#part1" role="tab" aria-controls="part1" onclick="topFunction()">1</a>
+         href="#part1" role="tab" aria-controls="part1" onclick="topFunction()"> Page 1</a>
     </li>
 
     <li class="nav-item">
       <a style="pointer-events: none; cursor: default;" class="nav-link" id="part2-tab" data-toggle="tab"
-         href="#part2" role="tab" aria-controls="part2" onclick="topFunction()">2</a>
+         href="#part2" role="tab" aria-controls="part2" onclick="topFunction()"> Page 2</a>
     </li>
 
     <li class="nav-item">
       <a style="pointer-events: none; cursor: default;" class="nav-link" id="part3-tab" data-toggle="tab"
-         href="#part3" role="tab" aria-controls="part3" onclick="topFunction()">3</a>
+         href="#part3" role="tab" aria-controls="part3" onclick="topFunction()"> Page 3</a>
     </li>
 
     <li class="nav-item">
       <a style="pointer-events: none; cursor: default;" class="nav-link" id="part4-tab" data-toggle="tab"
-         href="#part4" role="tab" aria-controls="part4" onclick="topFunction()">4</a>
+         href="#part4" role="tab" aria-controls="part4" onclick="topFunction()"> Page 4</a>
     </li>
 
     <li class="nav-item">
       <a style="pointer-events: none; cursor: default;" class="nav-link" id="part5-tab" data-toggle="tab"
-         href="#part5" role="tab" aria-controls="part5" onclick="topFunction()">5</a>
+         href="#part5" role="tab" aria-controls="part5" onclick="topFunction()"> Page 5</a>
     </li>
 
     <li class="nav-item">
       <a style="pointer-events: none; cursor: default;" class="nav-link" id="part6-tab" data-toggle="tab"
-         href="#part6" role="tab" aria-controls="part6" onclick="topFunction()">6</a>
+         href="#part6" role="tab" aria-controls="part6" onclick="topFunction()"> Page 6</a>
     </li>
 
     <li class="nav-item">
       <a style="pointer-events: none; cursor: default;" class="nav-link" id="part7-tab" data-toggle="tab"
-         href="#part7" role="tab" aria-controls="part7" onclick="topFunction()">7</a>
+         href="#part7" role="tab" aria-controls="part7" onclick="topFunction()"> Page 7</a>
     </li>
 
     <li class="nav-item">
       <a style="pointer-events: none; cursor: default;" class="nav-link" id="part8-tab" data-toggle="tab"
-         href="#part8" role="tab" aria-controls="part8" onclick="topFunction()">8</a>
+         href="#part8" role="tab" aria-controls="part8" onclick="topFunction()"> Page 8</a>
     </li>
 
     <li class="nav-item">
       <a style="pointer-events: none; cursor: default;" class="nav-link" id="part9-tab" data-toggle="tab"
-         href="#part9" role="tab" aria-controls="part9" onclick="topFunction()">9</a>
+         href="#part9" role="tab" aria-controls="part9" onclick="topFunction()"> Page 9</a>
     </li>
 
   </ul>
   <!-- end navigation -->
+  <style>
+   .otree-timer {
+       display: none;
+   }
+  </style>
+<div class="custom-timer alert alert-warning">
+    <p> You need to complete the instructions before:
+        <span style="font-weight: bold">
+          <span class="otree-timer__time-left"></span></br>
+        </span>
+        Please do not forget to click <kbd>Start Experiment</kbd> button in the last page once you finish the instructions.
 
-
+    </p>
+</div>
 
   <!-- Tab content -->
   <div class="tab-content" id="myTabContent">
