--- a/oTree/notmatched/templates/notmatched/NotMatched.html
+++ b/oTree/notmatched/templates/notmatched/NotMatched.html
@@ -18,9 +18,7 @@
     <p>
 You earned a participation fee of {{ session.config.showup_fee }} EUR.
 
-        We will send the amount you earned in your bank account within the time period that is mentioned in the invitation e-mail.
-        You will receive another e-mail when we made the transaction.
-
+Please go do the Prolific completion page by clicking on the link below in order to confirm your participation. 
 
 
     </p>
