improved decision and captcha pages

--- a/oTree/captcha/templates/captcha/Captcha.html
+++ b/oTree/captcha/templates/captcha/Captcha.html
@@ -43,8 +43,8 @@ After the time is up, you will be redirected to next stage.
       <button id="submitButton" type="button" class="btn btn-primary" onclick="sendAnswer()">Submit</button> 
     </div>
     <div class ="p-2">
-      <h5>You can also press <kbd>ENTER ↵</kbd> key on your keyboard to submit the captcha.
-      </h5> To get a new captcha, you can click on <kbd>Submit</kbd> or press <kbd>ENTER ↵</kbd> key.
+      Please note that you can also press <kbd>ENTER ↵</kbd> key on your keyboard to submit the captcha.
+      
     </div>
   </div>
   <script>
