--- a/oTree/instructions/templates/instructions/i6.html
+++ b/oTree/instructions/templates/instructions/i6.html
@@ -11,7 +11,7 @@
   {% if session.config.competition %}
     competitors in your group.
   {% else %}
-    participant in your group.
+    participants in your group.
   {% endif %}
 
 </p>
