--- a/oTree/notmatched/templates/notmatched/NotMatched.html
+++ b/oTree/notmatched/templates/notmatched/NotMatched.html
@@ -16,7 +16,7 @@
 
 
     <p>
-You earned a participation fee of {{ session.config.showup_fee }} EUR.
+You earned a participation fee of {{ session.config.showup_fee | c }}.
 
 Please go do the Prolific completion page by clicking on the link below in order to confirm your participation. 
 
