--- a/oTree/captcha/templates/captcha/Matched.html
+++ b/oTree/captcha/templates/captcha/Matched.html
@@ -6,8 +6,26 @@ The Effort Stage
 {% endblock %}
 
 {% block content %}
-<p> By clicking the <kbd>Next</kbd> button you will start playing <strong>the effort stage</strong>. 
+
+  <style>
+   .otree-timer {
+       display: none;
+   }
+  </style>
+
+  <div class="alert alert-primary">
+    <p> You will start the effort task in:
+        <span style="font-weight: bold">
+          <span class="otree-timer__time-left"></span></br>
+          You will be redirected automatically.
+        </span>
+    </p>
+  </div>
+
+
+<p> You will start playing <strong>the effort stage</strong>. Please get ready.
 </p>
+
 <p>
   Your name will be shown as <strong>Player {{ player.visible_name }}</strong>. 
   Other 
@@ -19,5 +37,4 @@ group members
  in your group are Player {{ others_names.0}}, Player {{ others_names.1}}, Player {{ others_names.2}}
 </p>
 
-{% next_button %}
 {% endblock %}
