--- a/oTree/captcha/templates/captcha/Captcha.html
+++ b/oTree/captcha/templates/captcha/Captcha.html
@@ -42,7 +42,7 @@ After the time is up, you will be redirected to next stage.
 
       <button id="submitButton" type="button" class="btn btn-primary" onclick="sendAnswer()">Submit</button> 
     </div>
-    <div class ="p-2>"
+    <div class ="p-2">
       Please note that you can also press <kbd>ENTER ↵</kbd> key on your keyboard to submit the captcha.
       
     </div>
